[project]
    authors = [{ name = "Bean", email = "bean@yuanfen.net" }]
    classifiers = [
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        'Programming Language :: Python',
    ]
    dependencies = [
        "alibabacloud-dysmsapi20170525~=4.5.0",
        "chardet~=7.1",
        "pydantic~=2.12",
        "pytz~=2025.2",
        "pyyaml~=6.0",
        "redis~=7.3",
        "requests~=2.32",
        "watchdog~=6.0",
    ]
    description = "Yuanfen Python Library"
    license = { text = "MIT" }
    name = "yuanfen"
    readme = "README.md"
    requires-python = ">=3.14.3"
    version = "0.0.0"

[project.urls]
    repository = "https://github.com/YuanfenNet/yf-lib-py"

[dependency-groups]
    dev = ["ruff>=0.15.5"]

[tool.ruff]
    line-length = 180
